--- a/UnitTestMocking/UnitTestMocking.Services.UnitTests/UnitTestMocking.Services.UnitTests.csproj
+++ b/UnitTestMocking/UnitTestMocking.Services.UnitTests/UnitTestMocking.Services.UnitTests.csproj
@@ -8,8 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Moq" Version="4.11.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\UnitTestMocking.Contracts\UnitTestMocking.Contracts.csproj" />
+    <ProjectReference Include="..\UnitTestMocking.Repositories\UnitTestMocking.Repositories.csproj" />
+    <ProjectReference Include="..\UnitTestMocking.Services\UnitTestMocking.Services.csproj" />
   </ItemGroup>
 
 </Project>
